--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>6</version>
 	</parent>
 	<artifactId>beanshell-maven-plugin-archetype</artifactId>
-	<version>1.2.3-SNAPSHOT</version>
+	<version>1.2.3</version>
 	<packaging>maven-archetype</packaging>
 	<name>Maven Archetype Beanshell-based Maven Plugin</name>
 	<description>Maven Archetype to generate an Beanshell-based Maven Plugin</description>
@@ -16,7 +16,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/genthaler/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:https://github.com/genthaler/${project.artifactId}.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>beanshell-maven-plugin-archetype-1.2.3</tag>
 		<url>https://github.com/genthaler/${project.artifactId}</url>
 	</scm>
 	<build>
